<resources>
    <string name="app_name">Wedding</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_menu_dress">服装</string>
    <string name="nav_menu_customer">客户</string>
    <string name="nav_menu_reserve">预定</string>
    <string name="nav_menu_more">更多</string>
    <string name="nav_menu_setting">设置</string>

    <string name="dress_rent_hint">租金：</string>
    <string name="dress_origin_price_hint">原价：</string>
    <string name="dress_menu_sort">排序</string>
    <string name="dress_menu_sort_create_time_asc">创建时间升序</string>
    <string name="dress_menu_sort_create_time_desc">创建时间降序</string>
    <string name="dress_menu_sort_origin_price_asc">价格升序</string>
    <string name="dress_menu_sort_origin_price_desc">价格降序</string>
    <string name="dress_menu_sort_rent_asc">租金升序</string>
    <string name="dress_menu_sort_rent_desc">租金降序</string>
    <string name="dress_reserve">预定</string>
    <string name="dress_filter">筛选</string>
    <string name="dress_filter_apply">应用</string>
    <string name="dress_filter_clear">清除所有</string>
    <string name="dress_image_count_placeholder">+%d</string>

    <string name="setting_label">设置</string>
    <string name="setting_dress_sort_preference">服装默认排序</string>
    <string name="setting_dress_sort_create_time_asc">创建时间升序</string>
    <string name="setting_dress_sort_create_time_desc">创建时间降序</string>
    <string name="setting_dress_sort_origin_price_asc">价格升序</string>
    <string name="setting_dress_sort_origin_price_desc">价格降序</string>
    <string name="setting_dress_sort_rent_asc">租金升序</string>
    <string name="setting_dress_sort_rent_desc">租金降序</string>

    <string name="filter_empty">暂无筛选条件</string>

</resources>