<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_dress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_dress_image"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/tv_dress_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_dress_image"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/tv_dress_remark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="2"
                android:minLines="2"
                android:textColor="@color/colorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_dress_name"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/tv_dress_rent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_dress_remark"
                tools:text="￥50.00" />

            <TextView
                android:id="@+id/tv_dress_rent_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dress_rent_hint"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_dress_rent"
                app:layout_constraintEnd_toStartOf="@id/tv_dress_rent" />

            <TextView
                android:id="@+id/tv_dress_origin_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_dress_rent_hint"
                app:layout_constraintEnd_toStartOf="@id/tv_dress_rent_hint"
                tools:text="￥19.00" />

            <TextView
                android:id="@+id/tv_dress_origin_price_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dress_origin_price_hint"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_dress_rent_hint"
                app:layout_constraintEnd_toStartOf="@id/tv_dress_origin_price" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dress_reserve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/dress_reserve"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_dress_rent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>